ocfl-java-core/src/test/resources/validation/object/padding-mismatch/v1/inventory.json.sha512
e1f97ac73ebaada243a98ae7811afbf084fd6286c51c70dede992999729480543b4a90b02d63ddbbc4a6fad6ca768bbc250f62d688490a575e14a2bded388a47	inventory.json