ocfl-java-core/src/test/resources/invalid-repos/bad-logical-paths/o2/v4/inventory.json.sha512
f2079f7aa3d9381b7ef002d59bffa5fdcb793ac2fcbbbad91df2196b9adf7e1809871a9a9019c57b368eeae4b7d9821d5d2288c876c8374312c3e5a7c2bd4194	inventory.json